Add new styles. Add new sections.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,54 @@
             <button class="video__button video__button--primary">
                 <i class="fas fa-book"></i> Learn More
             </button>
-
+            <button class="video__button video__button--secondary">
+                <i class="fas fa-play-circle"></i> Watch Video
+            </button>
+        </div>
+        <div class="video__container"></div>
+    </section>
+    <section class="program">
+        <h2 class="program__title">Explore Our State of the Art Facilities and Enriching Learning Experience</h2>
+        <div class="programs__cards">
+            <div class="programs__card"></div>
+            <div class="programs__card"></div>
+            <div class="programs__card"></div>
         </div>
     </section>
+    <section class="element">
+        <div class="element__left">
+            <div class="element__placeholder"></div>
+        </div>
+        <div class="element__right">
+            <h2>Sign Up Today Now!</h2>
+            <p class="element__subtitle">Fill out the form below to sign up for our newsleeter and receive updates</p>
+            <form class="element__form">
+                <h3>Your Interests:</h3>
+                <ul class="element__list">
+                    <li class="element__list-item">Web Development</li>
+                    <li class="element__list-item">UI UX Desing</li>
+                    <li class="element__list-item">Digital Marketing</li>
+                </ul>
+
+                <div class="element__form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" placeholder="Enter username">
+                </div>
+                <div class="element__form-group">
+                    <label for="course">Select a Course:</label>
+                    <select id="course">
+                        <option value="">Choose a course...</option>
+                        <option value="html">HTML & CSS</option>
+                        <option value="js">Javascript</option>
+                        <option value="react">React</option>
+                    </select>
+                    <button type="submit" class="element__button">Submit Form</button>
+                </div>
+            </form>
+        </div>
+    </section>
+
+
+
 </body>
 </html>
